--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,153 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+  background-color: #5eb1bfff;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #fffeffff;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.navbar form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navbar form input {
+  font-size: 1.5rem;
+  padding-left: 1rem;
+  outline: none;
+  border-left: 1px solid #9d8189ff;
+  border-top: 1px solid #9d8189ff;
+  border-bottom: 1px solid #9d8189ff;
+  border-right: 0;
+}
+
+.navbar form input:focus {
+  -webkit-box-shadow: 0px 0px 2px 2px #9d8189ff;
+          box-shadow: 0px 0px 2px 2px #9d8189ff;
+}
+
+.navbar form button {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-right: 1px solid #9d8189ff;
+  border-top: 1px solid #9d8189ff;
+  border-bottom: 1px solid #9d8189ff;
+  border-left: 0;
+  background-color: #9d8189ff;
+  color: #fffeffff;
+  cursor: pointer;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  outline: none;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
+}
+
+.navbar form button:hover {
+  background-color: #fffeffff;
+  color: #9d8189ff;
+}
+
+.navbar form button:focus {
+  -webkit-box-shadow: 0px 0px 2px 2px #9d8189ff;
+          box-shadow: 0px 0px 2px 2px #9d8189ff;
+}
+
+.navbar .nav-links span {
+  margin-left: 1rem;
+  cursor: pointer;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
+}
+
+.navbar .nav-links span:hover {
+  color: #f4e409ff;
+}
+
+.navbar .nav-links span svg {
+  margin-right: 0.25rem;
+}
+
+.slideshow {
+  overflow: hidden;
+  height: 60vh;
+  width: 300vw;
+}
+
+.slideshow .slides {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-transition: -webkit-transform 500ms;
+  transition: -webkit-transform 500ms;
+  transition: transform 500ms;
+  transition: transform 500ms, -webkit-transform 500ms;
+}
+
+.slideshow .slides .slide {
+  width: 100vw;
+  height: 60vh;
+  background-size: cover;
+  background-image: url(./testbg.jpg);
+}
+
+.slideshow .slides .slide .slide-content {
+  background-color: #000300ff;
+  padding: 1rem;
+  color: #fffeffff;
+  padding-top: 5vh;
+  width: 30vw;
+  position: relative;
+  left: 10vw;
+}
+
+.slideshow .slides .slide .slide-content h2 {
+  font-size: 3rem;
+}
+
+.slideshow .slides .slide .slide-content p {
+  color: #9d8189ff;
+}
+
+.slideshow .slides .slide .slide-content button {
+  padding: 0.25rem;
+  color: #fffeffff;
+  border-radius: 0;
+  border: none;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #9d8189ff), color-stop(50%, #fffeffff));
+  background: linear-gradient(#9d8189ff 50%, #fffeffff 50%);
+  background-size: 200% 200%;
+  margin-top: 0.5rem;
+  cursor: pointer;
+  font-size: 1rem;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
+}
+
+.slideshow .slides .slide .slide-content button:hover {
+  color: #9d8189ff;
+  background-position: 100% 100%;
 }
 
 * {
-  box-sizing: border-box;
+  scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+body {
+  overflow-x: hidden;
+}
+/*# sourceMappingURL=globals.css.map */
