--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -12,6 +12,7 @@
       font-size: 1.5rem;
       padding-left: 1rem;
       outline: none;
+      width: clamp(300px, 50vw, 800px);
       border-left: 1px solid $mountbatten-pink;
       border-top: 1px solid $mountbatten-pink;
       border-bottom: 1px solid $mountbatten-pink;
